# rio-tiler-fs

./: .bumpversion.cfg  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
rio_tiler_fs/: __init__.py  reader.py
tests/: __init__.py  test_reader.py
