[project]
name = "rio-tiler-fs"
description = "Connect rio-tiler and fsspec"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "fsspec",
    "rio-tiler>=3.1,<4.0",
    "rasterio>=1.3a3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
]
doc = [
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Source = "https://github.com/cogeotiff/rio-tiler-fs"
Documentation = "https://cogeotiff.github.io/rio-tiler-fs/"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rio_tiler_fs"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
]

[tool.isort]
profile = "black"
known_first_party = ["rio_tiler_fs", "rio_tiler"]
known_third_party = ["rasterio", "fsspec"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"
ignore_missing_imports = "True"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"
